--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij,kotlin,gradle,macos,eclipse,visualstudiocode
+/.idea/
